deleted dataset and augmented to 250, retraining models

--- a/scripts/fine_tune.ipynb
+++ b/scripts/fine_tune.ipynb
@@ -2043,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3170,24 +3170,41 @@
     "# )\n",
     "\n",
     "\n",
+    "# model_fine_tuned.train(\n",
+    "#     data=\"../f1-strategy/f1-dataset/data.yaml\",\n",
+    "#     epochs=NUM_EPOCHS,\n",
+    "#     batch=BATCH_SIZE,\n",
+    "#     optimizer=\"AdamW\",\n",
+    "#     lr0=LEARNING_RATE / 2,  # Mantener un aprendizaje más lento para no sobreajustar\n",
+    "#     momentum=0.9,\n",
+    "#     weight_decay=0.0001,  # Mantener el ajuste original para evitar sobreajuste\n",
+    "#     label_smoothing=0.1,\n",
+    "#     degrees=10.0,\n",
+    "#     mixup=0.2,\n",
+    "#     patience=10,  # Paciencia ajustada a 10\n",
+    "#     pretrained=True,  # Mantener el conocimiento previo\n",
+    "#     project='../f1-strategy/yolo-files/runs',\n",
+    "#     name='train_finetune',\n",
+    "# )\n",
+    "\n",
     "model_fine_tuned.train(\n",
     "    data=\"../f1-strategy/f1-dataset/data.yaml\",\n",
     "    epochs=NUM_EPOCHS,\n",
     "    batch=BATCH_SIZE,\n",
     "    optimizer=\"AdamW\",\n",
-    "    lr0=LEARNING_RATE / 2,  # Mantener un aprendizaje más lento para no sobreajustar\n",
+    "    lr0=LEARNING_RATE / 3,  # Reducción más agresiva del learning rate\n",
     "    momentum=0.9,\n",
-    "    weight_decay=0.0001,  # Mantener el ajuste original para evitar sobreajuste\n",
-    "    label_smoothing=0.1,\n",
-    "    degrees=10.0,\n",
-    "    mixup=0.2,\n",
-    "    patience=10,  # Paciencia ajustada a 10\n",
-    "    pretrained=True,  # Mantener el conocimiento previo\n",
+    "    weight_decay=0.001,  # Aumentar regularización\n",
+    "    label_smoothing=0.2,  # Mayor suavizado para evitar overconfidence\n",
+    "    degrees=15.0,  # Más rotación para ayudar con ángulos lejanos\n",
+    "    mixup=0.3,  # Mayor mezcla para generalización\n",
+    "    patience=15,  # Más paciencia para convergencia\n",
+    "    pretrained=True,\n",
     "    project='../f1-strategy/yolo-files/runs',\n",
     "    name='train_finetune',\n",
-    ")\n",
-    "\n",
-    "\n"
+    "    fliplud=0.1,  # Añadir flip vertical\n",
+    "    shear=2.0  # Distorsión adicional\n",
+    ")\n"
    ]
   },
   {
@@ -4576,24 +4593,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 73\u001b[0m\n\u001b[0;32m     70\u001b[0m     cv2\u001b[38;5;241m.\u001b[39mdestroyAllWindows()\n\u001b[0;32m     72\u001b[0m \u001b[38;5;66;03m# Ejecutar la detección en tiempo real a partir de un vídeo\u001b[39;00m\n\u001b[1;32m---> 73\u001b[0m \u001b[43mdetect_in_video\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m../f1-strategy/data/videos/spain_2023_race.mp4.f399.mp4\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[15], line 66\u001b[0m, in \u001b[0;36mdetect_in_video\u001b[1;34m(model, video_path)\u001b[0m\n\u001b[0;32m     54\u001b[0m         cv2\u001b[38;5;241m.\u001b[39mputText(\n\u001b[0;32m     55\u001b[0m             annotated_frame,\n\u001b[0;32m     56\u001b[0m             labels[i],\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     62\u001b[0m             cv2\u001b[38;5;241m.\u001b[39mLINE_AA\n\u001b[0;32m     63\u001b[0m         )\n\u001b[0;32m     65\u001b[0m     cv2\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mF1 Detection\u001b[39m\u001b[38;5;124m'\u001b[39m, annotated_frame)\n\u001b[1;32m---> 66\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwaitKey\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;241m&\u001b[39m \u001b[38;5;241m0xFF\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mord\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mq\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     67\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     69\u001b[0m cap\u001b[38;5;241m.\u001b[39mrelease()\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detección detenida por el usuario.\n"
      ]
     }
    ],
    "source": [
     "import cv2\n",
+    "import numpy as np\n",
     "from ultralytics import YOLO\n",
     "import supervision as sv\n",
     "import torch\n",
@@ -4606,6 +4619,20 @@
     "\n",
     "# Configurar el anotador (sólo para las cajas)\n",
     "box_annotator = sv.BoxAnnotator(thickness=2)\n",
+    "\n",
+    "def shrink_boxes(boxes, shrink_ratio=0.9):\n",
+    "    # boxes: lista o array de [x1, y1, x2, y2]\n",
+    "    new_boxes = []\n",
+    "    for box in boxes:\n",
+    "        x1, y1, x2, y2 = box\n",
+    "        cx = (x1 + x2) / 2\n",
+    "        cy = (y1 + y2) / 2\n",
+    "        w = (x2 - x1) * shrink_ratio\n",
+    "        h = (y2 - y1) * shrink_ratio\n",
+    "        new_box = [cx - w/2, cy - h/2, cx + w/2, cy + h/2]\n",
+    "        new_boxes.append(new_box)\n",
+    "    # Convertir a numpy array para que se pueda aplicar astype(int) en el anotador.\n",
+    "    return np.array(new_boxes)\n",
     "\n",
     "def detect_in_video(model, video_path):\n",
     "    cap = cv2.VideoCapture(video_path)\n",
@@ -4635,6 +4662,9 @@
     "        # Asignar las etiquetas al objeto detections\n",
     "        detections.labels = labels\n",
     "        \n",
+    "        # Reducir el tamaño de las bounding boxes y convertir a array de NumPy\n",
+    "        detections.xyxy = shrink_boxes(detections.xyxy, shrink_ratio=0.9)\n",
+    "        \n",
     "        # Anotar el frame con las cajas (sobre el frame redimensionado)\n",
     "        annotated_frame = box_annotator.annotate(\n",
     "            scene=frame_resized.copy(),\n",
@@ -4642,7 +4672,6 @@
     "        )\n",
     "        \n",
     "        # Añadir manualmente los textos (nombre del equipo) sobre cada caja\n",
-    "        # Se asume que detections.xyxy contiene las coordenadas [x1, y1, x2, y2] de cada caja.\n",
     "        for i, box in enumerate(detections.xyxy):\n",
     "            x1, y1, x2, y2 = map(int, box)\n",
     "            cv2.putText(\n",
@@ -4666,7 +4695,7 @@
     "    cv2.destroyAllWindows()\n",
     "\n",
     "# Ejecutar la detección en tiempo real a partir de un vídeo\n",
-    "detect_in_video(model, \"../f1-strategy/data/videos/spain_2023_race.mp4.f399.mp4\")"
+    "detect_in_video(model, \"../f1-strategy/data/videos/spain_2023_race.mp4.f299.mp4\")\n"
    ]
   }
  ],
