new videos downloaded, script for gap improved

--- a/scripts/YOLO_fine_tune.ipynb
+++ b/scripts/YOLO_fine_tune.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5044,7 +5044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5160,7 +5160,9 @@
     "    cv2.destroyAllWindows()\n",
     "\n",
     "# Ejecutar la detección en tiempo real a partir de un vídeo\n",
-    "detect_in_video(model, \"../f1-strategy/data/videos/spain_2023_race.mp4.f299.mp4\")\n"
+    "detect_in_video(model, \"../f1-strategy/data/videos/spain_2023_race.mp4.f299.mp4\")\n",
+    "\n",
+    "#detect_in_video(model, \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\")"
    ]
   }
  ],
