added model fine tuned 2, still needs to be trained and compared

--- a/scripts/YOLO_fine_tune.ipynb
+++ b/scripts/YOLO_fine_tune.ipynb
@@ -2366,7 +2366,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FIRST DEVELOPED MODEL\n",
+    "# model_fine_tuned.train(\n",
+    "#     data=\"../f1-strategy/f1-dataset/data.yaml\",\n",
+    "#     epochs=NUM_EPOCHS,\n",
+    "#     batch=BATCH_SIZE,\n",
+    "#     optimizer=\"AdamW\",\n",
+    "#     lr0=LEARNING_RATE / 2,  # Aprendizaje más lento para no sobreajustar\n",
+    "#     momentum=0.9,\n",
+    "#     weight_decay=0.0001,\n",
+    "#     label_smoothing=0.1,\n",
+    "#     degrees=10.0,\n",
+    "#     mixup=0.2,\n",
+    "#     patience=5,\n",
+    "#     pretrained=True,  # Importante para mantener el conocimiento previo\n",
+    "#     project='../f1-strategy/yolo-files/runs',\n",
+    "#     name='train_finetune'\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SECOND DEVELOPED MODEL\n",
+    "# model_fine_tuned.train(\n",
+    "#     data=\"../f1-strategy/f1-dataset/data.yaml\",\n",
+    "#     epochs=NUM_EPOCHS,\n",
+    "#     batch=BATCH_SIZE,\n",
+    "#     optimizer=\"AdamW\",\n",
+    "#     lr0=LEARNING_RATE / 2,  # Mantener un aprendizaje más lento para no sobreajustar\n",
+    "#     momentum=0.9,\n",
+    "#     weight_decay=0.0001,  # Mantener el ajuste original para evitar sobreajuste\n",
+    "#     label_smoothing=0.1,\n",
+    "#     degrees=10.0,\n",
+    "#     mixup=0.2,\n",
+    "#     patience=10,  # Paciencia ajustada a 10\n",
+    "#     pretrained=True,  # Mantener el conocimiento previo\n",
+    "#     project='../f1-strategy/yolo-files/runs',\n",
+    "#     name='train_finetune',\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3595,41 +3645,6 @@
    "source": [
     "model_fine_tuned = YOLO(\"../f1-strategy/weights/f1_detection_best.pt\")  \n",
     "\n",
-    "# model_fine_tuned.train(\n",
-    "#     data=\"../f1-strategy/f1-dataset/data.yaml\",\n",
-    "#     epochs=NUM_EPOCHS,\n",
-    "#     batch=BATCH_SIZE,\n",
-    "#     optimizer=\"AdamW\",\n",
-    "#     lr0=LEARNING_RATE / 2,  # Aprendizaje más lento para no sobreajustar\n",
-    "#     momentum=0.9,\n",
-    "#     weight_decay=0.0001,\n",
-    "#     label_smoothing=0.1,\n",
-    "#     degrees=10.0,\n",
-    "#     mixup=0.2,\n",
-    "#     patience=5,\n",
-    "#     pretrained=True,  # Importante para mantener el conocimiento previo\n",
-    "#     project='../f1-strategy/yolo-files/runs',\n",
-    "#     name='train_finetune'\n",
-    "# )\n",
-    "\n",
-    "\n",
-    "# model_fine_tuned.train(\n",
-    "#     data=\"../f1-strategy/f1-dataset/data.yaml\",\n",
-    "#     epochs=NUM_EPOCHS,\n",
-    "#     batch=BATCH_SIZE,\n",
-    "#     optimizer=\"AdamW\",\n",
-    "#     lr0=LEARNING_RATE / 2,  # Mantener un aprendizaje más lento para no sobreajustar\n",
-    "#     momentum=0.9,\n",
-    "#     weight_decay=0.0001,  # Mantener el ajuste original para evitar sobreajuste\n",
-    "#     label_smoothing=0.1,\n",
-    "#     degrees=10.0,\n",
-    "#     mixup=0.2,\n",
-    "#     patience=10,  # Paciencia ajustada a 10\n",
-    "#     pretrained=True,  # Mantener el conocimiento previo\n",
-    "#     project='../f1-strategy/yolo-files/runs',\n",
-    "#     name='train_finetune',\n",
-    "# )\n",
-    "\n",
     "model_fine_tuned.train(\n",
     "    data=\"../f1-strategy/f1-dataset/data.yaml\",\n",
     "    epochs=NUM_EPOCHS,\n",
@@ -3647,12 +3662,68 @@
     "    name='train_finetune',\n",
     "    flipud=0.1,  # Añadir flip vertical\n",
     "    shear=2.0  # Distorsión adicional\n",
-    ")\n"
+    ")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_fine_tuned_2 = YOLO(\"../f1-strategy/weights/f1_detection_best.pt\") \n",
+    "# Transfer Learning Controlado\n",
+    "# ----------------------------\n",
+    "# Congelar capas iniciales (primer 50% de capas)\n",
+    "for p in model.model.model[:10].parameters():  # Ajustar según arquitectura\n",
+    "    p.requires_grad = False\n",
+    "\n",
+    "# Configuración de Entrenamiento\n",
+    "# ------------------------------\n",
+    "model_fine_tuned_2.train(\n",
+    "    data=\"data.yaml\",\n",
+    "    epochs=80,  # Más épocas para convergencia suave\n",
+    "    batch=8,     # Reducir batch size para mejor estabilidad\n",
+    "    imgsz=1280,  # Mayor resolución para detalles\n",
+    "    optimizer=\"AdamW\",\n",
+    "    lr0=1e-4,    # Learning rate muy bajo\n",
+    "    lrf=1e-5,    # Learning rate final mínimo\n",
+    "    momentum=0.9,\n",
+    "    weight_decay=0.001,\n",
+    "    label_smoothing=0.2,\n",
+    "    degrees=10.0,\n",
+    "    mixup=0.1,    # Mezcla moderada\n",
+    "    copy_paste=0.1,\n",
+    "    fl_gamma=2.0, # Focal Loss balanceado\n",
+    "    box=5.0,      # Peso para bounding boxes\n",
+    "    cls=1.0,      # Peso base para clasificación\n",
+    "    hsv_h=0.01,   # Aumentos de color suaves\n",
+    "    hsv_s=0.5,\n",
+    "    hsv_v=0.5,\n",
+    "    translate=0.1,\n",
+    "    scale=0.5,\n",
+    "    shear=2.0,\n",
+    "    perspective=0.0005,\n",
+    "    flipud=0.01,\n",
+    "    fliplr=0.5,\n",
+    "    mosaic=0.5,\n",
+    "    close_mosaic=10,\n",
+    "    overlap_mask=False,\n",
+    "    single_cls=False,\n",
+    "    device=DEVICE,\n",
+    "    pretrained=True,\n",
+    "    patience=15,\n",
+    "    resume=False,\n",
+    "    plots=True,\n",
+    "    exist_ok=True,\n",
+    "    name='f1_finetune_safe'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3904,7 +3975,9 @@
    ],
    "source": [
     "# Evaluar después del fine-tuning\n",
-    "model_fine_tuned.val()"
+    "model_fine_tuned.val()\n",
+    "\n",
+    "model_fine_tuned_2.val()"
    ]
   },
   {
@@ -5044,7 +5117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
