--- a/scripts/YOLO_fine_tune.ipynb
+++ b/scripts/YOLO_fine_tune.ipynb
@@ -3672,52 +3672,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_fine_tuned_2 = YOLO(\"../f1-strategy/weights/f1_detection_best.pt\") \n",
-    "# Transfer Learning Controlado\n",
-    "# ----------------------------\n",
-    "# Congelar capas iniciales (primer 50% de capas)\n",
-    "for p in model.model.model[:10].parameters():  # Ajustar según arquitectura\n",
+    "model_fine_tuned_2 = YOLO(\"../f1-strategy/weights/f1_detection_best.pt\")\n",
+    "\n",
+    "# Asegúrate que tu data.yaml tenga EXACTAMENTE esta línea descomentada:\n",
+    "# class_weights: [1.2, 1.1, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.1, 1.2]\n",
+    "\n",
+    "# Transfer Learning Controlado (CORRECCIÓN IMPORTANTE: model -> model_fine_tuned_2)\n",
+    "# --------------------------------------------------------------------------------\n",
+    "# Congelar capas iniciales (primer 30% para mayor estabilidad)\n",
+    "for p in model_fine_tuned_2.model.model[:6].parameters():  # Capas 0-5 congeladas\n",
     "    p.requires_grad = False\n",
     "\n",
-    "# Configuración de Entrenamiento\n",
-    "# ------------------------------\n",
+    "# Configuración de Entrenamiento Optimizada\n",
+    "# -----------------------------------------\n",
     "model_fine_tuned_2.train(\n",
-    "    data=\"data.yaml\",\n",
-    "    epochs=80,  # Más épocas para convergencia suave\n",
-    "    batch=8,     # Reducir batch size para mejor estabilidad\n",
-    "    imgsz=1280,  # Mayor resolución para detalles\n",
+    "    data=\"../f1-strategy/f1-dataset/data.yaml\",  # Asegurar ruta correcta\n",
+    "    epochs=80,\n",
+    "    batch=8,\n",
+    "    imgsz=1280,\n",
     "    optimizer=\"AdamW\",\n",
-    "    lr0=1e-4,    # Learning rate muy bajo\n",
-    "    lrf=1e-5,    # Learning rate final mínimo\n",
+    "    lr0=1e-4,\n",
+    "    lrf=1e-5,\n",
     "    momentum=0.9,\n",
     "    weight_decay=0.001,\n",
-    "    label_smoothing=0.2,\n",
-    "    degrees=10.0,\n",
-    "    mixup=0.1,    # Mezcla moderada\n",
-    "    copy_paste=0.1,\n",
-    "    fl_gamma=2.0, # Focal Loss balanceado\n",
-    "    box=5.0,      # Peso para bounding boxes\n",
-    "    cls=1.0,      # Peso base para clasificación\n",
-    "    hsv_h=0.01,   # Aumentos de color suaves\n",
-    "    hsv_s=0.5,\n",
-    "    hsv_v=0.5,\n",
-    "    translate=0.1,\n",
-    "    scale=0.5,\n",
-    "    shear=2.0,\n",
-    "    perspective=0.0005,\n",
-    "    flipud=0.01,\n",
-    "    fliplr=0.5,\n",
-    "    mosaic=0.5,\n",
-    "    close_mosaic=10,\n",
+    "    label_smoothing=0.25,  # Aumentado para compensar pesos\n",
+    "    degrees=12.0,  # Ligero aumento para variación angular\n",
+    "    mixup=0.15,    # Mezcla más conservadora\n",
+    "    copy_paste=0.05,\n",
+    "    fl_gamma=1.5,  # Reducido para evitar focalización excesiva\n",
+    "    box=6.0,       # Balance entre localization/clasificación\n",
+    "    cls=1.2,       # Aumentado para sinergia con class_weights\n",
+    "    hsv_h=0.015,\n",
+    "    hsv_s=0.6,\n",
+    "    hsv_v=0.4,\n",
+    "    translate=0.08,\n",
+    "    scale=0.4,\n",
+    "    shear=1.8,\n",
+    "    perspective=0.0003,\n",
+    "    flipud=0.0,    # Desactivado (poco útil en F1)\n",
+    "    fliplr=0.4,\n",
+    "    mosaic=0.6,\n",
+    "    close_mosaic=15,\n",
     "    overlap_mask=False,\n",
     "    single_cls=False,\n",
     "    device=DEVICE,\n",
     "    pretrained=True,\n",
-    "    patience=15,\n",
+    "    patience=20,   # Más paciencia para convergencia\n",
     "    resume=False,\n",
     "    plots=True,\n",
     "    exist_ok=True,\n",
-    "    name='f1_finetune_safe'\n",
+    "    name='f1_finetune_v3',\n",
+    "    # Parámetros críticos para class_weights\n",
+    "    loss_cls_type='balanced'\n",
     ")"
    ]
   },
@@ -3976,8 +3982,22 @@
    "source": [
     "# Evaluar después del fine-tuning\n",
     "model_fine_tuned.val()\n",
-    "\n",
-    "model_fine_tuned_2.val()"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Después del entrenamiento\n",
+    "val_results = model_fine_tuned_2.val()\n",
+    "print(f\"\"\"\n",
+    "Recall Williams: {val_results.results_dict['recall/9']:.2%}\n",
+    "Precisión Williams: {val_results.results_dict['precision/9']:.2%}\n",
+    "Confusiones Williams-Mercedes: {val_results.confusion_matrix[9,7]}\n",
+    "\"\"\")"
    ]
   },
   {
