--- a/scripts/gap_calculation.ipynb
+++ b/scripts/gap_calculation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +88,9 @@
     "    cv2.destroyAllWindows()\n",
     "\n",
     "# Ejecutar con tu video\n",
-    "#video_path = \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\"\n",
-    "video_path = \"../f1-strategy/data/videos/spain_2023_race.mp4.f399.mp4\"\n",
-    "\n",
+    "# video_path = \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\"\n",
+    "#video_path = \"../f1-strategy/data/videos/spain_2023_race.mp4.f399.mp4\"\n",
+    "video_path =\"../f1-strategy/data/videos/bahrein_2023.mp4\"\n",
     "process_video_with_yolo(video_path)"
    ]
   }
