--- a/scripts/gap_calculation.ipynb
+++ b/scripts/gap_calculation.ipynb
@@ -22,10 +22,10 @@
     "from ultralytics import YOLO\n",
     "\n",
     "DEVICE = 'cuda:0' if torch.cuda.is_available() else 'cpu'\n",
-    "model = YOLO(\"../f1-strategy/weights/f1_detection_fine_tuned_best.pt\")\n",
+    "model = YOLO(\"../f1-strategy/weights/f1_detection_fine_tuned_best_2.pt\")\n",
     "model.to(DEVICE)\n",
     "\n",
-    "CAR_LENGTH_METERS = 5.5  # Longitud real del coche\n",
+    "CAR_LENGTH_METERS = 5.63  # Longitud real del coche\n",
     "FRAME_WIDTH = 640\n",
     "\n",
     "def calculate_gap(box1, box2):\n",
@@ -88,9 +88,9 @@
     "    cv2.destroyAllWindows()\n",
     "\n",
     "# Ejecutar con tu video\n",
-    "# video_path = \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\"\n",
+    "video_path = \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\"\n",
     "#video_path = \"../f1-strategy/data/videos/spain_2023_race.mp4.f399.mp4\"\n",
-    "video_path =\"../f1-strategy/data/videos/bahrein_2023.mp4\"\n",
+    "# video_path =\"../f1-strategy/data/videos/bahrein_2023.mp4\"\n",
     "process_video_with_yolo(video_path)"
    ]
   }
