added model pruned for training it, with a new opencv script

--- a/scripts/YOLO_fine_tune.ipynb
+++ b/scripts/YOLO_fine_tune.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6763,7 +6763,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ultralytics import YOLO\n",
+    "import torch\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import albumentations as A\n",
+    "from ultralytics.data.augment import Albumentations\n",
+    "\n",
+    "# 1. Cargar el modelo fine-tuned existente\n",
+    "model_pruned = YOLO('ruta/a/tu/modelo_fine_tuned.pt')\n",
+    "\n",
+    "# 2. Configuración para un fine-tuning enfocado en robustez\n",
+    "# Definir transformaciones adicionales específicas para mejorar detección a distancia\n",
+    "custom_transforms = A.Compose([\n",
+    "    # Simular objetos a distancia mediante escalado y blur\n",
+    "    A.RandomScale(scale_limit=(-0.5, -0.2), p=0.5),  # Hacer objetos más pequeños\n",
+    "    A.GaussianBlur(blur_limit=(1, 3), p=0.3),        # Simular desenfoque por distancia\n",
+    "    \n",
+    "    # Simular condiciones de luz variables\n",
+    "    A.RandomBrightnessContrast(brightness_limit=0.3, contrast_limit=0.3, p=0.5),\n",
+    "    A.RandomGamma(gamma_limit=(80, 120), p=0.3),\n",
+    "    \n",
+    "    # Simular cambios de perspectiva\n",
+    "    A.ShiftScaleRotate(shift_limit=0.1, scale_limit=0.1, rotate_limit=10, p=0.5),\n",
+    "    \n",
+    "    # Aumentar robustez contra oclusiones parciales\n",
+    "    A.CoarseDropout(max_holes=3, max_height=32, max_width=32, p=0.3),\n",
+    "    \n",
+    "    # Mejorar robustez contra degradación de imagen\n",
+    "    A.ImageCompression(quality_lower=60, quality_upper=100, p=0.3),\n",
+    "    A.MotionBlur(blur_limit=7, p=0.2),  # Simular movimiento de cámara\n",
+    "])\n",
+    "\n",
+    "# 3. Registrar las transformaciones personalizadas\n",
+    "def custom_albumentations():\n",
+    "    return custom_transforms\n",
+    "\n",
+    "# Registrar las transformaciones\n",
+    "Albumentations.register(custom_transforms=custom_albumentations)\n",
+    "\n",
+    "# 4. Configurar un proceso de fine-tuning con enfoque en casos difíciles\n",
+    "# Configuración para entrenar con énfasis en objetos pequeños y difíciles\n",
+    "results = model_pruned.train(\n",
+    "    data='../f1-strategy/f1-dataset/data.yaml',\n",
+    "    epochs=15,                      # Menos épocas para evitar sobreajuste\n",
+    "    imgsz=960,                      # Aumentar resolución para mejorar detección de objetos pequeños\n",
+    "    batch=8,                        # Reducir batch si es necesario por memoria\n",
+    "    patience=5,\n",
+    "    cos_lr=True,                    # Learning rate con cosine scheduling\n",
+    "    lr0=0.0002,                     # Learning rate inicial reducido\n",
+    "    lrf=0.00001,                    # Learning rate final muy bajo\n",
+    "    optimizer='AdamW',              # Optimizador adaptativo\n",
+    "    weight_decay=0.0005,            # Regularización para evitar sobreajuste\n",
+    "    warmup_epochs=2,                # Warm-up gradual\n",
+    "    cache=True,                     # Caché para acelerar entrenamiento\n",
+    "    plots=True,                     # Guardar plots para análisis\n",
+    "    \n",
+    "    # Parámetros críticos para mejorar detección a distancia\n",
+    "    scale=0.5,                      # Escalar imágenes durante entrenamiento\n",
+    "    degrees=5.0,                    # Rotación moderada\n",
+    "    shear=2.0,                      # Shear moderado\n",
+    "    perspective=0.0005,             # Perspectiva sutil\n",
+    "    flipud=0.01,                    # Flip vertical ocasional\n",
+    "    fliplr=0.3,                     # Flip horizontal frecuente\n",
+    "    mosaic=0.8,                     # Uso de mosaico (combinar imágenes)\n",
+    "    mixup=0.1,                      # Mixup ligero\n",
+    "    copy_paste=0.1,                 # Copy-paste para aumentar variedad\n",
+    "    \n",
+    "    # Pesos de la función de pérdida - críticos para este caso\n",
+    "    box=7.5,                        # Mayor énfasis en localización precisa (aumentado)\n",
+    "    cls=2.5,                        # Énfasis en clasificación correcta\n",
+    "    dfl=1.5,                        # Distribution Focal Loss weight\n",
+    "    \n",
+    "    # Balance de clases y tamaños\n",
+    "    overlap_mask=True,              # Permitir superposición de máscaras\n",
+    "    mask_ratio=4,                   # Ratio para máscaras\n",
+    "    iou=0.6,                        # IoU threshold para asignación\n",
+    "    single_cls=False,               # Multi-clase\n",
+    "    \n",
+    "    # Estos parámetros mejoran la detección de objetos pequeños\n",
+    "    nbs=64,                         # Nominal batch size\n",
+    "    close_mosaic=10,                # Desactivar mosaico en últimas épocas\n",
+    "    rect=False,                     # No usar aspect ratio para batch\n",
+    "    val=True,                       # Validar durante entrenamiento\n",
+    "    save=True,                      # Guardar checkpoints\n",
+    "    \n",
+    "    # Guardar el mejor modelo según mAP\n",
+    "    save_period=-1,\n",
+    "    project='yolo-files/runs',\n",
+    "    name='train_finetune_robustez',\n",
+    "    exist_ok=True\n",
+    ")\n",
+    "\n",
+    "# 5. Después del entrenamiento, validar con test set\n",
+    "metrics = model.val()\n",
+    "print(f\"Resultados de validación: {metrics}\")\n",
+    "\n",
+    "# 6. Opcionalmente, aplicar pruning para mejorar velocidad manteniendo precisión\n",
+    "# Esto reduce el tamaño del modelo, útil para inferencia en tiempo real\n",
+    "try:\n",
+    "    from ultralytics.engine.model import Model\n",
+    "    from ultralytics.utils.torch_utils import prune\n",
+    "    \n",
+    "    # Aplicar pruning al 30% de los pesos menos importantes\n",
+    "    pruned_model = prune(model, 0.3)\n",
+    "    \n",
+    "    # Guardar modelo optimizado\n",
+    "    pruned_model.save('modelo_pruned.pt')\n",
+    "    print(\"Modelo optimizado con pruning guardado como 'modelo_pruned.pt'\")\n",
+    "except Exception as e:\n",
+    "    print(f\"No se pudo aplicar pruning: {e}\")\n",
+    "    print(\"Guardando modelo normal...\")\n",
+    "    model.save('modelo_robusto.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -6784,7 +6905,7 @@
     "DEVICE = 'cuda:0' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
     "# Cargar modelo fine-tuned\n",
-    "model = YOLO(\"../f1-strategy/weights/f1_detection_fine_tuned_best_2.pt\")\n",
+    "model_fine_tuned_2 = YOLO(\"../f1-strategy/weights/f1_detection_fine_tuned_best_2.pt\")\n",
     "model.to(DEVICE)\n",
     "\n",
     "# Configurar el anotador (sólo para las cajas)\n",
@@ -6884,6 +7005,212 @@
     "#detect_in_video(model, \"../f1-strategy/data/videos/spain_2023_race.mp4.f299.mp4\")\n",
     "#detect_in_video(model, \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\")\n",
     "detect_in_video(model, \"../f1-strategy/data/videos/abu_dhabi_2024_race.mp4.f399.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "# Cargar el modelo optimizado\n",
+    "model_pruned = YOLO('../f1-strategy/weights/f1_detection_fine_tuned_best_2.pt')  # o 'modelo_pruned.pt' si funcionó el pruning\n",
+    "\n",
+    "# Configuración de detección para video\n",
+    "def process_video(video_path, output_path=None, conf_threshold=0.3, show=True):\n",
+    "    # Abrir video\n",
+    "    cap = cv2.VideoCapture(video_path)\n",
+    "    if not cap.isOpened():\n",
+    "        print(f\"Error al abrir el video: {video_path}\")\n",
+    "        return\n",
+    "    \n",
+    "    # Parámetros del video\n",
+    "    fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
+    "    w = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "    h = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "    \n",
+    "    # Configurar salida si se solicita\n",
+    "    if output_path:\n",
+    "        fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+    "        out = cv2.VideoWriter(output_path, fourcc, fps, (w, h))\n",
+    "    \n",
+    "    # Variables para seguimiento temporal\n",
+    "    last_detections = {}  # Para el tracking temporal\n",
+    "    track_history = {}    # Historial de posiciones para suavizado\n",
+    "    id_counter = 0        # Contador para IDs de objetos\n",
+    "    \n",
+    "    # Paleta de colores para clases\n",
+    "    class_colors = {}\n",
+    "    \n",
+    "    # Lista de frames para promediado temporal\n",
+    "    detection_buffer = []\n",
+    "    buffer_size = 3  # Número de frames para promediar\n",
+    "    \n",
+    "    # Procesar video\n",
+    "    frame_count = 0\n",
+    "    \n",
+    "    while cap.isOpened():\n",
+    "        success, frame = cap.read()\n",
+    "        if not success:\n",
+    "            break\n",
+    "            \n",
+    "        frame_count += 1\n",
+    "        original_frame = frame.copy()\n",
+    "        \n",
+    "        # Procesamiento previo para mejorar la detección\n",
+    "        # 1. Aplicar filtro de nitidez para objetos lejanos\n",
+    "        if frame_count % 2 == 0:  # Aplicar solo en frames alternos para rendimiento\n",
+    "            kernel = np.array([[-1,-1,-1], [-1,9,-1], [-1,-1,-1]])\n",
+    "            frame = cv2.filter2D(frame, -1, kernel)\n",
+    "        \n",
+    "        # 2. Ejecutar la detección con YOLOv8 con parámetros optimizados\n",
+    "        results = model_pruned.predict(\n",
+    "            source=frame, \n",
+    "            conf=conf_threshold,\n",
+    "            iou=0.45,         # Valor de IoU para NMS\n",
+    "            max_det=20,       # Máximo número de detecciones\n",
+    "            classes=None,     # Todas las clases\n",
+    "            agnostic_nms= False,   # NMS class-agnostic\n",
+    "            verbose=False,\n",
+    "            stream=True,\n",
+    "            vid_stride=1      # Procesar todos los frames\n",
+    "        )\n",
+    "        \n",
+    "        # Objetos detectados en frame actual\n",
+    "        current_detections = {}\n",
+    "        \n",
+    "        # Procesar resultados\n",
+    "        for r in results:\n",
+    "            boxes = r.boxes\n",
+    "            \n",
+    "            if len(boxes) > 0:\n",
+    "                # Almacenar para promediado temporal\n",
+    "                detection_buffer.append(boxes)\n",
+    "                if len(detection_buffer) > buffer_size:\n",
+    "                    detection_buffer.pop(0)\n",
+    "                \n",
+    "                # Recorrer todas las detecciones\n",
+    "                for box in boxes:\n",
+    "                    # Extraer información\n",
+    "                    x1, y1, x2, y2 = box.xyxy[0].cpu().numpy().astype(int)\n",
+    "                    conf = float(box.conf[0])\n",
+    "                    cls_id = int(box.cls[0])\n",
+    "                    cls_name = model.names[cls_id]\n",
+    "                    \n",
+    "                    # Asignar color consistente para cada clase\n",
+    "                    if cls_name not in class_colors:\n",
+    "                        class_colors[cls_name] = (\n",
+    "                            np.random.randint(0, 255),\n",
+    "                            np.random.randint(0, 255),\n",
+    "                            np.random.randint(0, 255)\n",
+    "                        )\n",
+    "                    \n",
+    "                    # Calcular centro para tracking\n",
+    "                    center_x = (x1 + x2) // 2\n",
+    "                    center_y = (y1 + y2) // 2\n",
+    "                    \n",
+    "                    # Área de la detección (útil para filtrar por tamaño)\n",
+    "                    area = (x2 - x1) * (y2 - y1)\n",
+    "                    \n",
+    "                    # Ajustar umbral de confianza según el tamaño del objeto\n",
+    "                    # Más estricto con objetos pequeños para reducir falsos positivos\n",
+    "                    size_adjusted_conf = conf\n",
+    "                    if area < 5000:  # Objeto pequeño (lejano)\n",
+    "                        size_adjusted_conf *= 1.2  # Requerir mayor confianza\n",
+    "                    \n",
+    "                    # Solo procesar si supera el umbral ajustado\n",
+    "                    if size_adjusted_conf >= conf_threshold:\n",
+    "                        # Añadir a detecciones actuales\n",
+    "                        object_id = None\n",
+    "                        \n",
+    "                        # Verificar si corresponde a un objeto ya detectado anteriormente\n",
+    "                        for old_id, old_info in last_detections.items():\n",
+    "                            old_center_x, old_center_y = old_info['center']\n",
+    "                            old_cls = old_info['class']\n",
+    "                            \n",
+    "                            # Calcular distancia entre centros\n",
+    "                            distance = np.sqrt((center_x - old_center_x)**2 + (center_y - old_center_y)**2)\n",
+    "                            \n",
+    "                            # Si está cerca y es la misma clase, asignar mismo ID\n",
+    "                            if distance < 100 and old_cls == cls_name:\n",
+    "                                object_id = old_id\n",
+    "                                break\n",
+    "                        \n",
+    "                        # Si no se encontró correspondencia, asignar nuevo ID\n",
+    "                        if object_id is None:\n",
+    "                            object_id = id_counter\n",
+    "                            id_counter += 1\n",
+    "                            track_history[object_id] = []\n",
+    "                        \n",
+    "                        # Actualizar historial de tracking\n",
+    "                        if object_id in track_history:\n",
+    "                            track_history[object_id].append((center_x, center_y))\n",
+    "                            # Limitar historial a 10 posiciones\n",
+    "                            if len(track_history[object_id]) > 10:\n",
+    "                                track_history[object_id].pop(0)\n",
+    "                        \n",
+    "                        # Almacenar información actual\n",
+    "                        current_detections[object_id] = {\n",
+    "                            'box': (x1, y1, x2, y2),\n",
+    "                            'conf': conf,\n",
+    "                            'class': cls_name,\n",
+    "                            'center': (center_x, center_y),\n",
+    "                            'area': area\n",
+    "                        }\n",
+    "                        \n",
+    "                        # Dibujar bounding box\n",
+    "                        color = class_colors[cls_name]\n",
+    "                        cv2.rectangle(original_frame, (x1, y1), (x2, y2), color, 2)\n",
+    "                        \n",
+    "                        # Etiquetar con clase y confianza\n",
+    "                        label = f\"{cls_name}: {conf:.2f}\"\n",
+    "                        t_size = cv2.getTextSize(label, cv2.FONT_HERSHEY_SIMPLEX, 0.7, 2)[0]\n",
+    "                        cv2.rectangle(original_frame, (x1, y1-t_size[1]-3), (x1+t_size[0], y1), color, -1)\n",
+    "                        cv2.putText(original_frame, label, (x1, y1-3), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255,255,255), 2)\n",
+    "                        \n",
+    "                        # Dibujar historial de trayectoria (si existe)\n",
+    "                        if object_id in track_history and len(track_history[object_id]) > 1:\n",
+    "                            points = np.array(track_history[object_id], dtype=np.int32)\n",
+    "                            cv2.polylines(original_frame, [points], False, color, 2)\n",
+    "        \n",
+    "        # Actualizar detecciones previas\n",
+    "        last_detections = current_detections\n",
+    "        \n",
+    "        # Mostrar información de rendimiento\n",
+    "        fps_text = f\"FPS: {fps:.1f}\"\n",
+    "        cv2.putText(original_frame, fps_text, (20, 40), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 2)\n",
+    "        \n",
+    "        # Guardar frame procesado si se solicitó\n",
+    "        if output_path:\n",
+    "            out.write(original_frame)\n",
+    "        \n",
+    "        # Mostrar frame si se solicitó\n",
+    "        if show:\n",
+    "            cv2.imshow('F1 Detection', original_frame)\n",
+    "            \n",
+    "            # Salir si se presiona 'q'\n",
+    "            if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "                break\n",
+    "    \n",
+    "    # Liberar recursos\n",
+    "    cap.release()\n",
+    "    if output_path:\n",
+    "        out.release()\n",
+    "    cv2.destroyAllWindows()\n",
+    "\n",
+    "# Ejemplo de uso\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Ruta a tu video\n",
+    "    video_path = \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\"\n",
+    "    output_path = \"../f1-strategy/data/videos/spain_detection.mp4\"\n",
+    "    \n",
+    "    # Procesar video\n",
+    "    process_video(video_path, output_path, conf_threshold=0.35, show=True)"
    ]
   }
  ],
