add completely new model with radical approach

--- a/scripts/gap_calculation.ipynb
+++ b/scripts/gap_calculation.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Computer Vision: Gap Calculation using YOLO net and OpenCV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -12,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +29,7 @@
     "from ultralytics import YOLO\n",
     "\n",
     "DEVICE = 'cuda:0' if torch.cuda.is_available() else 'cpu'\n",
-    "model = YOLO(\"../f1-strategy/weights/f1_detection_fine_tuned_best_2.pt\")\n",
+    "model = YOLO(\"../f1-strategy/weights/model_pruned_best.pt\")\n",
     "model.to(DEVICE)\n",
     "\n",
     "CAR_LENGTH_METERS = 5.63  # Longitud real del coche\n",
